--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,21 @@
-<h2>Forgot your password?</h2>
+<%= render :partial => "devise/shared/header" %>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class = "content">
+    <div class="spacer"></div>
+    <div class="item">
+        <div class="title">Forgot Your Password ?</div>
+        <div class="metadata">Enter your Email Address to get Reset Password Instructions</div>
+    </div>
+    <div class="item">
 
-  <p><%= f.label :email %><br />
-  <%= f.email_field :email %></p>
+    <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <p><%= f.submit "Send me reset password instructions" %></p>
-<% end %>
+    <p><%= f.label :email %><br />
+        <%= f.email_field :email %></p>
 
-<%= render :partial => "devise/shared/links" %>
+        <p><%= f.submit "Send me reset password instructions" %></p>
+        <% end %>
+    </div>
+    <%= render :partial => "devise/shared/links" %>
+    <%= render :partial => "devise/shared/footer" %>
