--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,20 +1,4 @@
-<div class="container">
-    <div class="gfx"><span></span></div>
-    <div class="top">
-        <div class="navigation">
-            <a href="index.html" id="selected">Home</a>
-            <a href="index.html">The Journey</a>
-        </div>
-
-        <div class="pattern"><span></span></div>
-
-        <div class="header">
-            <h1>LunchNLearn</h1>
-            <p>Keep Yourself Informed N Learn How to Prepare for Changes</p>
-        </div>
-
-        <div class="pattern"><span></span></div>
-    </div>
+    <%= render :partial => "devise/shared/header" %>
     <div class = "content">
         <div class="spacer"></div>
         <div class="item">
@@ -24,28 +8,24 @@
         <div class="item">
 
             <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-            <%= devise_error_messages! %>
+                <%= devise_error_messages! %>
 
-            <p><%= f.label :email %><br />
-                <%= f.email_field :email %></p>
+                <p><%= f.label :username %><br />
+                    <%= f.text_field :username %></p>
+
+                <p><%= f.label :email %><br />
+                    <%= f.email_field :email %></p>
 
                 <p><%= f.label :password %><br />
-                    <%= f.password_field :password %></p>
+                <%= f.password_field :password %></p>
 
-                    <p><%= f.label :password_confirmation %><br />
-                        <%= f.password_field :password_confirmation %></p>
+                <p><%= f.label :password_confirmation %><br />
+                <%= f.password_field :password_confirmation %></p>
 
-                        <p><%= f.submit "Sign up" %></p>
-                        <% end %>
+                <p><%= f.submit "Sign up" %></p>
+            <% end %>
 
-                        <%= render :partial => "devise/shared/links" %>
-                    </div>
+            <%= render :partial => "devise/shared/links" %>
+        </div>
 
-
-                    <div class="divider"><span></span></div>
-                    <div class="divider"><span></span></div>
-                </div>
-                <div class="footer">
-                    &copy; 2011 <a href="index.html">LunchNLearn.com</a>  | Sprout Technology Services
-                </div>
-            </div>
+        <%= render :partial => "devise/shared/footer" %>
