--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LunchNLearn</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+    <title>LunchNLearn</title>
+    <%= stylesheet_link_tag :all %>
+    <%= javascript_include_tag :defaults %>
+    <%= csrf_meta_tag %>
 </head>
 <body>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<%= render :partial =>"devise/shared/header" %>
+<div class = "content-welcome">
+    <div class="spacer"></div>
+    <div class = "item">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
 
+        <%= render :partial =>"shared/links" %>
+    </div>
+</div>
 <%= yield %>
+
+<%= render :partial =>"devise/shared/footer" %>
 
 </body>
 </html>
