--- a/app/views/presentation_topics/new.html.erb
+++ b/app/views/presentation_topics/new.html.erb
@@ -1,2 +1,8 @@
-<h1>PresentationTopics#new</h1>
-<p>Find me in app/views/presentation_topics/new.html.erb</p>
+<div class = "content">
+    <div class="spacer"></div>
+
+    <div class="item">
+
+        <%= render "form" %>
+        <%= link_to "Back to Index", users_path %>
+    </div>
