--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class = "content">
+    <div class="spacer"></div>
+
+    <div class="item">
+        <p>user ko index</p>
+
+        <%= link_to "Wanna Speak? Post a topic" , new_user_presentation_topic_path(@user) %> <br/>
+        <%= link_to "View all topics" , presentation_topics_path %>
+
+        <%= render @users %>
+    </div>
