--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -19,7 +19,7 @@ a {color: #36C;}
 a:hover {color: #06F;}
 
 body {
-  background: #4E5D3C url(../images/bg.jpg);
+/*  background: #4E5D3C url(../images/bg.jpg);*/
   color: #444;
   font: normal 62.5% "Lucida Sans Unicode",sans-serif;
   margin: 0;
@@ -128,6 +128,20 @@ img.left {margin: 0 18px 6px 0;}
 .content .spacer {
   height: 42px;
 }
+
+/* content-welcome */
+.content-welcome {
+  background: url(../images/bgcontent.gif) no-repeat;
+  clear: both;
+  font-size: 1.5em;
+  margin: 0 52px;
+  text-align:center ;
+  padding: 0 38px 12px;
+}
+.content-welcome .spacer {
+  height: 10px;
+}
+
 
 /* sign in and up */
 .signing {
