--- a/app/views/presentation_topics/topics_index.html.erb
+++ b/app/views/presentation_topics/topics_index.html.erb
@@ -1,1 +1,9 @@
-akdgfkad
+<div class = "content">
+    <div class="spacer"></div>
+
+    <div class="item">
+        <p> All topics haru</p>
+        <%= render @presentation_topics %>
+    </div>
+
+    <%= link_to "Back to Index", users_path %>
