--- a/app/views/presentation_topics/_form.html.erb
+++ b/app/views/presentation_topics/_form.html.erb
@@ -1,8 +1,8 @@
 <h4> Showing presentation topic form </h4><br/>
 
-<% semantic_form_for ([@user,@presentation_topic]) do |form| %>
+<%= semantic_form_for ([@user,@presentation_topic]) do |form| %>
 
-<% form.inputs :presentation_topic => "Basic" do %>
+<%= form.inputs :presentation_topic => "Basic" do %>
 <%= form.input :title , :input_html => { :class => 'autogrow'} %>
 <%= form.input :description , :input_html => { :class => 'autogrow', :rows => 5} %>
 <%= form.input :duration , :label => "Duration (in minutes)" %>
