--- a/app/views/presentation_topics/show.html.erb
+++ b/app/views/presentation_topics/show.html.erb
@@ -1,2 +1,23 @@
-<h1>PresentationTopics#show</h1>
-<p>Find me in app/views/presentation_topics/show.html.erb</p>
+<div class = "content">
+    <div class="spacer"></div>
+
+    <div class="item">
+        <p>topic ko show</p>
+
+        <% user = User.find(@presentation_topic.user_id) %>
+        Posted By : <%= user.email %><br/>
+
+        <%= link_to "Interesting?? Vote for This !", user_presentation_topic_vote_path(user,@presentation_topic) %> <br/>
+
+        Title: <%= @presentation_topic.title %> <br/>
+        Duration: <%= @presentation_topic.duration %> minutes <br/>
+        Description: <%= @presentation_topic.description %> <br/>
+
+        Updated : <%= @presentation_topic.updated_at.to_s(:short) %> <br/>
+        Total Votes : <%= @presentation_topic.votes %> <br/>
+    </div>
+
+
+    <%= link_to "Back to Index", users_path %> <br/>
+
+    <%= link_to "See #{user.email}'s all topics", user_topics_index_path(user) %>
