Editing of Topic added. User cannot vote for their own topic feature also added

--- a/app/views/presentation_topics/_form.html.erb
+++ b/app/views/presentation_topics/_form.html.erb
@@ -5,7 +5,7 @@
 <%= form.inputs :presentation_topic => "Basic" do %>
 <%= form.input :title , :input_html => { :class => 'autogrow'} %>
 <%= form.input :description , :input_html => { :class => 'autogrow', :rows => 5} %>
-<%= form.input :duration , :label => "Duration (in minutes)" %>
+<%= form.input :duration , :label => "Presentation Duration (in minutes)" %>
 
 <%= form.commit_button %>
 
