--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -19,7 +19,7 @@ a {color: #36C;}
 a:hover {color: #06F;}
 
 body {
-/*  background: #4E5D3C url(../images/bg.jpg);*/
+  background: #4E5D3C url(../images/bg.jpg);
   color: #444;
   font: normal 62.5% "Lucida Sans Unicode",sans-serif;
   margin: 0;
