Rake Tasks Completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>LunchNLearn</title>
-    <%= stylesheet_link_tag :all %>
-    <%= javascript_include_tag :defaults %>
-    <%= csrf_meta_tag %>
-</head>
-<body>
+    <head>
+        <title>LunchNLearn</title>
+        <%= stylesheet_link_tag :all %>
+        <%= javascript_include_tag :defaults %>
+        <%= csrf_meta_tag %>
+    </head>
+    <body>
+        <!-- header part -->
+        <div class="container">
+            <div class="gfx"><span></span></div>
+            <div class="top">
+                <div class="navigation">
+                    <a href="index.html" id="selected">Home</a>
+                    <a href="index.html">The Journey</a>
+                </div>
 
-<%= render :partial =>"devise/shared/header" %>
-<div class = "content-welcome">
-    <div class="spacer"></div>
-    <div class = "item">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+                <div class="pattern"><span></span></div>
 
-        <%= render :partial =>"shared/links" %>
-    </div>
-</div>
-<%= yield %>
+                <div class="header">
+                    <h1>LunchNLearn</h1>
+                    <p>Keep Yourself Informed N Learn How to Prepare for Changes</p>
+                </div>
 
-<%= render :partial =>"devise/shared/footer" %>
+                <div class="pattern"><span></span></div>
+            </div>
 
-</body>
+            <div class = "content-welcome">
+                <div class="spacer"></div>
+                <div class = "item">
+                    <p class="notice"><%= notice %></p>
+                    <p class="alert"><%= alert %></p>
+
+                    <%= render :partial =>"shared/links" %>
+                </div>
+            </div>
+
+            <%= yield %>
+
+            <!-- footer part -->
+            <div class="divider"><span></span></div>
+            <div class="divider"><span></span></div>
+        </div>
+        <!-- container ends -->
+
+        <div class="footer">
+            &copy; 2011 <a href="index.html">LunchNLearn.com</a>  | Sprout Technology Services
+        </div>
+
+    </body>
 </html>
