--- a/app/views/presentation_topics/_form.html.erb
+++ b/app/views/presentation_topics/_form.html.erb
@@ -1,4 +1,4 @@
-<h4> Showing presentation topic form </h4><br/>
+<h4>Fill Presentation Details: </h4><br/>
 
 <%= semantic_form_for ([@user,@presentation_topic]) do |form| %>
 
