--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 
     <div class="item">
         <%= link_to "Wanna Speak? Post a topic" , new_user_presentation_topic_path(@user) %> <br/>
-        <%= link_to "View all topics" , presentation_topics_path %>
+        <%= link_to "View all topics" , presentation_topics_path %> <br/>
 
         <%= render @users %>
     </div>
