Few UI Displays Fixed

--- a/app/views/presentation_topics/_presentation_topic.html.erb
+++ b/app/views/presentation_topics/_presentation_topic.html.erb
@@ -1,6 +1,7 @@
-<ul>
+<ul type = "none">
     <% user = User.find(presentation_topic.user_id) %>
     <li> <%= link_to presentation_topic.title, user_presentation_topic_path(user,presentation_topic) %> </li>
-    posted by : <%=user.email %>
-    Updated: <%= time_ago_in_words(presentation_topic.updated_at) %> ago
+    <li>posted by : <%=user.email %></li>
+    <li>Updated: <%= time_ago_in_words(presentation_topic.updated_at) %> ago</li>
+    <li>Description: <%= presentation_topic.description.truncate(200) %></li>
 </ul>
