--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -59,12 +59,12 @@ blockquote p {padding: 6px;}
   width: 230px;
 }
 .item li {
-  margin-bottom: 10px ;
+/*  margin-bottom: 10px ;*/
   margin-left: 30px;
 }
 .item p {
   margin-bottom: 10px ;
-  margin-left: 40px;
+  margin-left: 50px;
 }
 .item h4 {
   margin-bottom: 10px ;
@@ -82,6 +82,16 @@ blockquote p {padding: 6px;}
   border: solid 1px #89A973 ;
   padding: 10px ;
   width: 230px;
+}
+.item ul{
+  background: url(../images/bgcontainer.jpg) ;
+  margin: 0 auto;
+  margin-top: 15px ;
+  margin-bottom: 30px ;
+/*  float: right;*/
+  border: solid 1px #89A973 ;
+  padding: 10px ;
+/*  width: 500px;*/
 }
 
 img.left {margin: 0 18px 6px 0;}
