--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
             <div class="gfx"><span></span></div>
             <div class="top">
                 <div class="navigation">
-                    <a href="index.html" id="selected">Home</a>
+                    <a href="http://localhost:3000" id="selected">Home</a>
                     <a href="index.html">The Journey</a>
                 </div>
 
@@ -40,12 +40,11 @@
 
             <!-- footer part -->
             <div class="divider"><span></span></div>
-            <div class="divider"><span></span></div>
         </div>
         <!-- container ends -->
 
         <div class="footer">
-            &copy; 2011 <a href="index.html">LunchNLearn.com</a>  | Sprout Technology Services
+            &copy; 2011 <a href="http://localhost:3000">LunchNLearn.com</a>  | Sprout Technology Services
         </div>
 
     </body>
