--- a/app/views/presentation_topics/index.html.erb
+++ b/app/views/presentation_topics/index.html.erb
@@ -3,7 +3,7 @@
     <div class="spacer"></div>
 
     <div class="item">
-        <p>all topics haru</p>
+    <div class="title"> All Topics</div>
         <%= render @presentation_topics %>
     </div>
 
