--- a/app/views/presentation_topics/topics_index.html.erb
+++ b/app/views/presentation_topics/topics_index.html.erb
@@ -2,7 +2,7 @@
     <div class="spacer"></div>
 
     <div class="item">
-        <p> All topics haru</p>
+        <div class="title"> All Topics By "<%= @user.email %>" </div>
         <%= render @presentation_topics %>
     </div>
 
