--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,6 @@
     <div class="item">
         <%= link_to "Wanna Speak? Post a topic" , new_user_presentation_topic_path(@user) %> <br/>
         <%= link_to "View all topics" , presentation_topics_path %> <br/>
-
+        <div class ="speakers_main_title">"Your SPEAKERS for The Week"</div>
         <%= render @users %>
     </div>
