--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
     <head>
         <title>LunchNLearn</title>
         <%= stylesheet_link_tag :all %>
-        <%= javascript_include_tag :defaults %>
+        <%= javascript_include_tag 'jquery', 'rails', 'application' %>
+
         <%= csrf_meta_tag %>
     </head>
     <body>
@@ -20,7 +21,7 @@
 
                 <div class="header">
                     <h1>LunchNLearn</h1>
-                    <p>Keep Yourself Informed N Learn How to Prepare for Changes</p>
+                    <p>"Keep Yourself Informed"<br/>N<br/>"Learn How to Prepare for Changes"</p>
                 </div>
 
                 <div class="pattern"><span></span></div>
