--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,7 +3,7 @@
        <span class="speaker_email"><%= link_to user.email, user_topics_index_path(user)%></span>
        <% user.presentation_topics.latest_topics.first(3).each do |topic| %>
        <li> <%= link_to topic.title, user_presentation_topic_path(user,topic) %> </li>
-       <p>Updated: <%= time_ago_in_words(topic.updated_at) %> ago<p>
+       <p>Created: <%= time_ago_in_words(topic.created_at) %> ago<p>
        <% end %>
        <p><%= link_to "See All", user_topics_index_path(user) %></p>
    </div>
