Final Commit for LunchNLearn

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
             <div class="top">
                 <div class="navigation">
                     <a href="http://localhost:3000" id="selected">Home</a>
-                    <a href="index.html">The Journey</a>
+                    <!-- <a href="index.html">The Journey</a> -->
                 </div>
 
                 <div class="pattern"><span></span></div>
