--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -1,6 +1,4 @@
 <% if user_signed_in? %>
-<p>Welcome <%= current_user.email%> | <%= link_to "Sign Out", destroy_user_session_path%></p>
-<p>Votes Remaining : <%= current_user.votes_remaining %></p>
-<% else%>
-<%#= link_to "Sign In", new_user_session_path%>
+    <p>Welcome <%= current_user.email%> | <%= link_to "Sign Out", destroy_user_session_path%></p>
+    <p>Votes Remaining :<span class ="votes_remaining"> <%= current_user.votes_remaining %></span></p>
 <% end%>
