--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -19,7 +19,7 @@ a {color: #36C;}
 a:hover {color: #06F;}
 
 body {
-/*  background: #4E5D3C url(../images/bg.jpg);*/
+  background: #4E5D3C url(../images/bg.jpg);
   color: #444;
   font: normal 62.5% "Lucida Sans Unicode",sans-serif;
   margin: 0;
@@ -49,7 +49,7 @@ blockquote p {padding: 6px;}
 .clearer {clear: both;}
 .vote_button{
   float: right;
-  margin-top: 20px;
+  margin-top: 16px;
   border:none;
 }
 .left {
@@ -82,7 +82,6 @@ blockquote p {padding: 6px;}
 .speakers_main_title{
   text-align:center;
   margin-bottom:10px;
-  margin-top:10px;
   font-size:19px;
   font-family: Fantasy, helvetica, calibri, arial, sans-serif;
 }
@@ -90,6 +89,11 @@ blockquote p {padding: 6px;}
   float:right;
   color: #A77B2A;
   font-size:14px;
+  font-family: cursive;
+}
+.item li h4 .vote_no{
+  font-size:25px;
+  font-family: cursive;
 }
 .item p {
   margin-bottom: 10px ;
@@ -159,7 +163,6 @@ blockquote p {padding: 6px;}
 }
 .item h4 {
   margin-bottom: 10px ;
-/*  margin-left: 20px ;*/
 }
 .item a:hover,.navigation #selected {
   color: #2C3111;
@@ -204,7 +207,7 @@ img.left {margin: 0 18px 6px 0;}
 }
 
 .gfx {
-/*  background: url(../images/gfx.jpg) no-repeat;*/
+  background: url(../images/gfx.jpg) no-repeat;
   float: left;
   height: 140px;
   margin-top: 12px;
@@ -354,4 +357,15 @@ img.left {margin: 0 18px 6px 0;}
 }
 .alert{
   color:red ;
+}
+.speak_up_image{
+/*  float: left;*/
+  overflow:hidden;
+  border: 0;
+  margin-left:15px;
+  text-decoration:none;
+}
+.view_all_image{
+  float: right;
+  overflow:hidden;
 }
